--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forex-signals-app",
+  "name": "forex-analysis-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,15 +13,17 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "openai": "^4.28.0",
-    "react-router-dom": "^6.22.2",
     "zustand": "^4.5.2",
-    "dotenv": "^16.4.5"
+    "date-fns": "^3.3.1",
+    "openai": "^4.28.0",
+    "axios": "^1.6.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
