--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "zustand": "^4.5.2",
     "date-fns": "^3.3.1",
     "openai": "^4.28.0",
+    "uuid": "^9.0.1",
     "axios": "^1.6.7",
-    "uuid": "^9.0.1"
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
